# kano2_frozen

./: README.md
docs/: PROTOCOL.md
python/: README.md  kano_frozen2.py  pyproject.toml
web/: README.md  index.html  kano_frozen2.js  package.json
