[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kano-frozen2"
version = "0.1.0"
description = "Control library for Kano Frozen 2 Sensor Kit"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bleak>=0.19.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/kano-frozen2"
